fix: decode selected video URLs on older Android versions